<resources>

    <string name="app_name">Kahvikaveri</string>
    <string name="name">Nimi</string>
    <string name="coffee_amount">Kahvia (g)</string>
    <string name="water_amount">Vettä (dl)</string>
    <string name="water_temperature">Vesi (C)</string>
    <string name="save">Tallenna</string>
    <string name="acrid">Kitkerää</string>
    <string name="description">Kuvaus</string>
    <string name="tags">Tägit</string>
    <string name="add">Lisää</string>
    <string name="search_hint">Hae reseptejä...</string>
    <string name="search">Hae</string>
    <color name="milk_coffee">#E7C7A1</color>
    <color name="coffee">#5A352D</color>
    <color name="vienna_coffee">#D0906D</color>
    <color name="past_time">#885540</color>
    <string name="back">Takaisin</string>
    <string name="taste_it">Maistele!</string>
    <string name="delete">Poista</string>

</resources>
